# scriptex

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release-linux.yml
scripts/: build-wasm.sh
src/: analysis_json.rs  bibliography.rs  citation.rs  color.rs  corpus.rs  diagrams.rs  document.rs  error.rs  font.rs  font_embed.rs  highlight.rs  hyphenate.rs  image_embed.rs  layout.rs  lexer.rs  lib.rs  macro_expand.rs  main.rs  math_layout.rs  parser.rs  pdf.rs  pgfplots.rs  section.rs  structure.rs  svg_render.rs  tikz.rs  tikz_render.rs  typeset.rs  wasm_api.rs  xref.rs
src/layout/: environments.rs  images.rs  lists.rs  math.rs  mod.rs  prescans.rs  sections.rs  spans.rs  state.rs  tables.rs  text.rs  title.rs  types.rs
src/parser/: algorithms.rs  body.rs  dimensions.rs  environments.rs  lists.rs  math.rs  mod.rs  preamble.rs  tables.rs
test_docs/: comprehensive_test.tex  gen_large.py  large_500.tex  ref_no_brace.tex  test1.tex
test_docs/icml2026_paper/: 00README.json  icml2026.sty  main.bib  main.tex
