[package]
name = "scriptex"
version = "0.1.0"
edition = "2021"
description = "Blazing fast LaTeX to PDF compiler - 1000x faster than pdflatex"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bheemrc/scriptex"
keywords = ["latex", "pdf", "compiler", "typesetting", "fast"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "scriptex"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "scriptex"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap", "env_logger", "memmap2", "mimalloc", "rayon", "lopdf", "printpdf", "rusttype", "owned_ttf_parser", "image", "subsetter"]
wasm = ["wasm-bindgen", "js-sys", "console_error_panic_hook", "getrandom/js", "getrandom_03"]

[dependencies]
# PDF generation (optional — only used in dead-code font_embed/image_embed modules)
lopdf = { version = "0.34", optional = true }
printpdf = { version = "0.7", optional = true }

# Font handling (optional — only used in dead-code font_embed module)
rusttype = { version = "0.9", optional = true }
owned_ttf_parser = { version = "0.25", optional = true }

# Image processing (optional — only used in dead-code image_embed module)
image = { version = "0.25", optional = true }

# Parallelism (optional — CLI only, not available in WASM)
rayon = { version = "1.10", optional = true }
crossbeam = "0.8"

# Fast string/text processing
memchr = "2.7"
bstr = "1.11"
itoa = "1"

# CLI (optional — CLI only)
clap = { version = "4", features = ["derive"], optional = true }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = { version = "0.11", optional = true }

# Fast hashing
ahash = "0.8"

# Unicode
unicode-segmentation = "1.12"
unicode-linebreak = "0.1"

# Compression
flate2 = "1.0"
miniz_oxide = "0.8"

# Performance
parking_lot = "0.12"

# Code highlighting
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# Content hashing for TikZ cache
sha2 = "0.10"

# Bibliography parsing
biblatex = "0.10"

# Font subsetting (optional — only used in dead-code font_embed module)
subsetter = { version = "0.2", optional = true }

# Memory mapping (optional — CLI only, not available in WASM)
memmap2 = { version = "0.9", optional = true }

# Fast allocator (optional — CLI only, not available in WASM)
mimalloc = { version = "0.1", default-features = false, optional = true }

# WASM dependencies (optional — WASM only)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", optional = true }
# getrandom v0.3 is pulled by ahash — needs wasm_js feature for WASM targets
getrandom_03 = { package = "getrandom", version = "0.3", optional = true, features = ["wasm_js"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
target-cpu = "x86-64"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release-wasm]
inherits = "release"
opt-level = "z"
strip = true
# target-cpu not valid for wasm

[profile.dev]
opt-level = 1
